# minesweeper

./: .gitignore  Procfile  README.md  main_flask.py  pyproject.toml  server.py  start-server.sh
backend/: pyproject.toml  server.py
browser/: index.css  index.html  index.js
frontend/: .eslintrc.yml  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/css/: index.css
frontend/src/: Game.ts  index.ts
frontend/static/: index.html
frontend/static/js/: index.js  index.js.map
static/css/: index.css
static/js/: index.js
